Fix spacing and overflow issues
The image did not have a max-width and produced
an overflow on mobile devices.

--- a/src/components/pages/HomePage/HomePage.scss
+++ b/src/components/pages/HomePage/HomePage.scss
@@ -2,6 +2,10 @@ body {
 	background:#fff;
 }
 
+.logo{
+  max-width: 100%;
+}
+
 a.border.nav-link.border-light.rounded.mr-1 {
   color: #3F729B;
 }
